force-app/main/default/objects/FSM_WOMeasuringPoint__c/FSM_WOMeasuringPoint__c.object-meta.xml
<CustomObject>
    <description>Created as part of SFS-2997</description>
    <label>Work Order Measuring Point</label>
    <nameField>
        <label>Work Order Measuring Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Measuring Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>