force-app/main/default/objects/FSM_WOMeasuringPoint__c/fields/FSM_CompletionStatus__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompletionStatus__c</fullName>
    <description>Updated to completed when a measuring document record is inserted for this measuring point.
#SFS-2997</description>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>