force-app/main/default/objects/FSM_WOMeasuringPoint__c/fields/FSM_Description__c.field-meta.xml
<CustomField>
    <fullName>FSM_Description__c</fullName>
    <formula>FSM_MeasuringPoint__r.FSM_Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>