force-app/main/default/objects/FSM_WOMeasuringPoint__c/fields/FSM_MeasuringPoint__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>created as part of SFS-2997</description>
    <label>Measuring Point</label>
    <referenceTo>FSM_MeasuringPoint__c</referenceTo>
    <relationshipName>WO_Measuring_Point_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>