force-app/main/default/objects/FSM_WOMeasuringPoint__c/fields/FSM_MeasuringPointNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPointNumber__c</fullName>
    <description>Created as a part of SFL-714</description>
    <formula>FSM_MeasuringPoint__r.FSM_MeasuringPointNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Measuring Point Number</label>
    <type>Text</type>
</CustomField>