force-app/main/default/objects/FSM_WOMeasuringPoint__c/fields/FSM_MeasuringPosition__c.field-meta.xml
<CustomField>
    <fullName>FSM_MeasuringPosition__c</fullName>
    <formula>FSM_MeasuringPoint__r.FSM_MeasuringPosition__c</formula>
    <label>Measuring Position</label>
    <type>Text</type>
</CustomField>