force-app/main/default/objects/FSM_WOMeasuringPoint__c/fields/FSM_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrder__c</fullName>
    <description>created as part of SFS-2997</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>WO_Measuring_Point_Readings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>