force-app/main/default/objects/FSM_WOMeasuringPoint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSM_WorkOrder__c</columns>
    <columns>FSM_MeasuringPoint__c</columns>
    <columns>FSM_CompletionStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>